main.css
html{
    height: 100%;
}
body{
    background: linear-gradient(42deg, rgb(127, 234, 255), rgb(108, 157, 234), rgb(91, 127, 205));
    color: rgb(16, 32, 27);
    margin: 0;
    box-sizing: border-box;
}
h2, .center{
    width: 50%;
    min-width: 375px;
    max-width: 735px;
    /*background: linear-gradient(125deg, rgb(95, 191, 159), rgb(111, 223, 186));*/
    /* background: url(https://i.imgur.com/MJAkxbh.png); */
    background-color: rgba(0,255,255,0.15);
    margin-left: auto;
    margin-right: auto;
    border-radius: 5px;
    box-shadow: 3px 3px 2px 2px black;
}

h2{
    text-align: center;
    background: rgb(179, 189, 233);
    width: 40%;
    height: 30px;  
    transition: 1.5s, linear;
}

h3 {
    text-align: center;
}

h2:hover{
    background: rgb(127, 234, 255);
    transform: scale(1.1);
    text-transform: uppercase;
}
label, input {
    margin-top:10px;
    margin-bottom: 5px;
}
input{
    margin-right: 5px;
}
form{
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    padding-bottom: 1px;
}
fieldset{
    margin-bottom: 10px;
    min-width: 350px;
    border-color: rgb(180, 127, 234);
    border-radius: 3px;
    border-width: 2px;
}

button{
    padding: 5px;
    background: rgb(127, 234, 255);
}
button:hover{
    background-color: lightblue;
}

.btn-field{    
    text-align: center;
}

.test{
    height: 125px;
}
.clicked{
    height: 600px;
    transition: 1.5s, linear;
    display: inline-block;
}

.left{
    display: inline-block;
    width: 49%;
    text-align: left;
}
.right{
    display: inline-block;
    width:49%;
    min-height: 22px;
    text-align: center;
    position: relative;
    bottom: 20px;
    border-width: 2px;
    border-style: solid;
    border-color: rgb(148, 127, 255);
    border-radius: 10px;
}
div.right span{
    position: relative;
    text-align: center;
    margin-top: 0;
    bottom: 30px;
}
.answer-box{
    display: inline-block;
    width: 100%;
    text-align: center;
}

.math{
    display: inline-block;
    padding-left: 25px;
}
div.math button{
    width: 30px;
}

.links {
	height: 100%;
}

a {
	color: black;
	padding-left: 25px;
	vertical-align: middle;
	position: relative;
	height:100%;
	padding-top: 10px;
	display: inline-block;
	text-decoration: none;
	font-size: 18px;
}

.thumbnail {
    /* max-width: 640px;
    max-height: 480px; */
    display: none;
    text-align: center;
}

.practice-form-api {
    height: 600px;

}

.test-api {
    border-width: 0;
}
#searchBox {
    width: 50%;
}

